2011-03-17  Dario Rodriguez  <dario.rodriguez@artica.es>

	* unix/pandora_agent: Fixed a typo with logfile parameter. Also fixed
	the gathering of secondary_server_opts parameters when transfer mode is 
	Tentacle. Thanks to KIKUCHI Koichiro for the report.

2011-03-02  Ramon Novoa  <rnovoa@artica.es>

	* win32/modules/pandora_module_factory.cc, unix/pandora_agent: Changed
	  module_post_process to module_postprocess to match the documentation.

2011-03-01  Ramon Novoa  <rnovoa@artica.es>

	* win32/modules/pandora_module.h,
	  win32/modules/pandora_module_factory.cc,
	  win32/modules/pandora_module.cc,
	  unix/pandora_agent,
	  shellscript/linux/pandora_agent: Set the module min, max and
	  post_process in the XML data file.

2011-02-14  Ramon Novoa  <rnovoa@artica.es>

	* embedded/INSTALL: Added instructions to cross-compile for
	  OpenWRT (x86).

2011-02-10  Sergio Martin <sergio.martin@artica.es>

	* android/src/pandroid/agent/PandroidAgent.java
	android/bin/Copy of Copy of Pandroid Agent.apk
	android/res/drawable-ldpi/logo.png
	android/res/drawable-ldpi/icon.png
	android/res/drawable-mdpi/logo.png
	android/res/drawable-mdpi/icon.png: Removed an unecessary apk
	file, added icons and logos to low and middle quality, 
	fixed xml file deletion, setted farscape as default host 
	and added to the default agent name a unique identifier

2011-02-07  Sergio Martin <sergio.martin@artica.es>

	* android/.project
	android/AndroidManifest.xml: Adding a neccesary directive 
	for market on manifest and update the pandroid agent version 

2011-02-07  Sergio Martin <sergio.martin@artica.es>

	* android/AndroidManifest.xml
	android/src/pandroid/agent/PandroidAgent.java
	android/src/pandroid/agent/PandroidAgentListener.java
	android/bin/pandroid/agent/PandroidAgentListener$2.class
	android/bin/pandroid/agent/PandroidAgentListener$3.class
	android/bin/pandroid/agent/PandroidAgentListener$MyLocationListener.class
	android/bin/pandroid/agent/PandroidAgentListener$1.class