@@ -1,3 +1,9 @@
+2011-04-05  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* win32/modules/pandora_module_exec.cc,
+	  win32/pandora_windows_service.cc: Fixed get module output part of over 4096 byte.
+
+
 2011-03-17  Dario Rodriguez  <dario.rodriguez@artica.es>
 
 	* unix/pandora_agent: Fixed a typo with logfile parameter. Also fixed
